--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Residencial Nova França</title>
 
-    <link href="/stylesheets/normalize.css" rel="stylesheet" type="text/css" /><link href="/stylesheets/all.css" rel="stylesheet" type="text/css" />
-    <script src="/javascripts/all.js" type="text/javascript"></script>
+    <link href="stylesheets/normalize.css" rel="stylesheet" type="text/css" /><link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
+    <script src="javascripts/all.js" type="text/javascript"></script>
   </head>
 
   <body class="index">
-    <img width="180" class="logo-novafranca" src="/images/logo-novafranca.svg" />
+    <img width="180" class="logo-novafranca" src="images/logo-novafranca.svg" />
 
   </body>
 </html>
